# finance-dashboard

./: .gitignore  README.md  justfile  pyproject.toml
data/: test_transactions.csv
frontend/: index.html  script.js  style.css
src/findash/: __main__.py  app.py  crud.py  data_contract.py  database.py
