[project]
name = "findash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "passlib[bcrypt]>=1.7.4",
    "pyjokes>=0.8.3",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]>=0.35.0",
]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.7",
]


# Command-line scripts for installations
#[project.scripts]
# For example:
# cmdline_tool = "cmdline.tool_cli:main"
# Build a big ol' dist with hatch
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/findash"]

[tool.black]
line-length = 100

